--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Numans&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Hello, world!</title>
+    <title>Geidans Solutions</title>
 </head>
 
 <body>
-    <div class="d-none d-md-block container-fluid bg-dark-blue py-2">
+    <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
         <div class="page-top container d-flex justify-content-between">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
             <div class="page-top-connect d-flex align-items-center">
@@ -35,7 +40,7 @@
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">Geidans Solutions</a>
                 <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -61,10 +66,10 @@
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white">
+        <div class="header-content container text-white px-3">
             <div class="row">
                 <div class='col-md-6'>
-                    <h1 class="header-content-heading fw-900 mb-4">
+                    <h1 class="header-content-heading fw-bold mb-4">
                         Get the best
                         <br class="d-xs-block d-md-none" />
                         out of
@@ -84,24 +89,24 @@
     </section>
     <!-- Section Header end  -->
     <!-- Section Problem Solver start  -->
-    <section class="py-md-5">
+    <section class="py-4 py-md-5 px-3">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 text-left">
-                    <h2 class="text-blue">Problem solvers</h2>
-                    <h2 class="text-blue">Process fixers</h2>
+                <div class="col-12 col-md-4 p-0 text-left">
+                    <h2 class="text-blue fw-bold">Problem solvers</h2>
+                    <h2 class="text-blue fw-bold">Process fixers</h2>
                 </div>
-                <div class="col-md-8">
-                    <h3 class="text-orange fw-bold">
+                <div class="col-12 col-md-8 p-0">
+                    <p class="text-orange fw-bold">
                         As a small or medium sized business
-                        <br>
+                        <br class="d-none d-md-block">
                         owner, you've come a long way fast
-                    </h3>
+                    </p>
                     <p class="text-blue">
                         You're poised for a success. You've invested time, money and
                         effort in people, technology and systems to increase efficiency.
                     </p>
-                    <h3 class="text-orange fw-bold">So why isn't the business performing?</h3>
+                    <p class="text-orange fw-bold">So why isn't the business performing?</p>
                     <p class="text-blue">Geidans Solutions are problem solvers and process fixers for SMEs</p>
                     <p class="text-blue">
                         We believe in empowering SMEs by impoving how they work.
@@ -113,69 +118,254 @@
                         you could achieve - we can help you take on the big boys
                         And win
                     </p>
+                    <div class="mt-4 d-block d-md-none">
+                        <button class="btn with-border text-uppercase text-blue fw-bold w-100 mb-3">our
+                            services</button>
+                        <button class="btn text-uppercase bg-orange text-white fw-bold w-100"> talk to us</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Problem Solver end  -->
     <!-- Section Review start -->
-    <section class="py-md-5 bg-orange">
+    <section class="py-4 py-md-5 px-3 bg-orange">
         <div class="container">
             <div class="section-header d-flex align-items-top">
-                <img src="" alt="left quote" />
-                <h2 class="ms-3 fw-bold text-white">GS ynderstood our challenges straight away"</h2>
+                <h2 class="ms-md-3 fw-bold text-white">
+                    <span class="left-quote">"</span>
+                    GS ynderstood our challenges
+                    straight away"
+                </h2>
             </div>
-            <p class="text-blue">
+            <p class="text-blue fw-normal">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
                 excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
                 similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
                 Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
-                deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium libero, in harum
-                suscipit animi voluptatum. Repudiandae cupiditate fugiat, quaerat dignissimos, molestias numquam
-                earum exercitationem veniam possimus
-            </p>
-            <div class="d-flex">
-                <img class="star-icon" src="./assets/Icon images/star_icon.png" alt="star-icon">
-                <img class="star-icon" src="./assets/Icon images/star_icon.png" alt="star-icon">
-                <img class="star-icon" src="./assets/Icon images/star_icon.png" alt="star-icon">
-                <img class="star-icon" src="./assets/Icon images/star_icon.png" alt="star-icon">
+                deleniti! Lorem ipsum dolor
+            <div class="d-flex mb-3">
+                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
             </div>
-            <p class="text-white fw-bold"> 4.5 on Google reviews</p>
+            <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
         </div>
     </section>
     <!-- Section Review end -->
+
     <!-- Section Why us start  -->
-    <section class="py-md-5 bg-light-grey">
+    <section class="py-4 py-md-5 px-3 bg-light-grey">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 text-left">
-                    <h2 class="text-blue">Think Smarter.</h2>
-                    <h2 class="text-blue">Grow Faster.</h2>
-                    <h2 class="text-blue">Compete Harder.</h2>
+                <div class="col-12 col-md-4 text-left mb-3 mb-md-0">
+                    <h2 class="text-blue fw-bold">Think Smarter.</h2>
+                    <h2 class="text-blue fw-bold">Grow Faster.</h2>
+                    <h2 class="text-blue fw-bold">Compete Harder.</h2>
                 </div>
-                <div class="col-md-8">
-                    <h3 class="text-dark">
+                <div class="col-12 col-md-8">
+                    <h4 class="text-dark fw-bolder">
                         Why Us
-                    </h3>
-                    <p class="text-blue">
+                    </h4>
+                    <p class="text-blue mb-0">
                         We believe if you control your processes, you control your business.
                     </p>
-                    <p class="text-blue">
+                    <p class="text-blue mb-0">
                         We streamline your systems, optimise your processes, in-crease your efficiency
                         increase your efficiency. Putting you back in control. And we just happen to do it
                         through powerful technology and software.
                     </p>
-                    <p class="text-blue">
+                    <p class="text-blue mb-3">
                         Every Geidans Solutions project has shown a positive ROI
                         Within the first 12 monthes. You see tangible benegits to you bottom line fast.
                     </p>
 
-                    <button class="btn bg-blue text-white fw-bold text-uppercase">that's why us</button>
+                    <button class="btn bg-blue text-white fw-bold text-uppercase d-none d-md-block">
+                        that's why us
+                    </button>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Why us end -->
+
+    <!-- Section Geidans-help start -->
+    <section class="section-help py-3 py-md-5 px-4">
+        <h2 class="text-orange text-center fw-bold mb-4 mb-md-5">How we can help</h2>
+        <div class="container">
+            <div class="row mb-4 mb-md-5">
+                <div class="col-lg-9 mx-auto d-flex flex-column align-items-center flex-md-row">
+                    <img class="me-0 me-md-5" src="./assets/Icon images/Systems_icon.png" alt="systems-icon">
+                    <div class="section-help-detail text-center text-md-start">
+                        <h2 class="fw-500 text-blue">Getting your software systems to talk each other</h2>
+                        <p class="text-blue d-none d-md-block">
+                            Getting software systems to talk each other is as important as getting people
+                            to communicate properly
+                        </p>
+                        <a href="#" class="text-orange fw-bold d-none d-md-block">Tell me more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-4 mb-md-5">
+                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
+                    <img class="me-0 me-md-5" src="./assets/Icon images/Building_icon.png" alt="systems-icon">
+                    <div class="section-help-detail text-center text-md-start">
+                        <h2 class="fw-500 text-blue">Building software that suits your business</h2>
+                        <p class="text-blue d-none d-md-block">
+                            Our technical development team build bespoke applications that fit your business
+                            and nobody's else.
+                        </p>
+                        <a href="#" class="text-orange fw-bold d-none d-md-block">What need that</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-4 mb-md-5">
+                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
+                    <img class="me-0 me-md-5" src="./assets/Icon images/Move_icon.png" alt="systems-icon">
+                    <div class="section-help-detail text-center text-md-start">
+                        <h2 class="fw-500 text-blue">What you need to move your data</h2>
+                        <p class="text-blue d-none d-md-block">
+                            we have 20 years' experience in shifting data safely
+                            so we know what we're doing.
+                        </p>
+                        <a href="#" class="text-orange fw-bold d-none d-md-block">We need that</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
+                    <img class="me-0 me-md-5" src="./assets/Icon images/Upgrade_icon.png" alt="systems-icon">
+                    <div class="section-help-detail">
+                        <h2 class="fw-500 text-blue text-center text-md-start">Making current software good as new</h2>
+                        <p class="text-blue d-none d-md-block">
+                            if you need to update your existing system rather than invest in a
+                            brand new one, we can refresh and rebund it.
+                        </p>
+                        <a href="#" class="text-orange fw-bold d-none d-md-block">Yes please</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Geidans-help end -->
+
+
+    <!-- Section Solutions start  -->
+    <section class="py-4 py-md-5 px-3 section-solution">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 d-flex flex-row flex-md-column justify-content-between">
+                    <h3 class="text-orange">Dynamic</h3>
+                    <h3 class="text-orange">Flexible</h3>
+                    <h3 class="text-orange">Fast</h3>
+                </div>
+                <div class="col-12 col-md-8">
+                    <p class="fw-bold text-white">
+                        At Geidans Solutions, we have over 20
+                        years' experience in soling the process issues that holdmany systemsb
+                        back from achieving real growth
+                    </p>
+                    <p class="fw-bold text-white">
+                        SME owners are can-do, make-it-happen people.
+                        <span class="text-orange">So are we</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Solutions end -->
+
+    <!-- Section Contact start -->
+    <section class="section-contact py-4 py-md-5 px-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <p class="text-blue">
+                        Want to work better, grow faster and compete on a bigger playing field?
+                    </p>
+                    <p class="text-white">
+                        Give us a call on
+                        <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Contact end -->
+
+    <!-- Footer start  -->
+    <footer class="footer bg-blue py-4 px-3 px-lg-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <h5 class="text-white fw-bold text-uppercase">
+                        get in touch
+                    </h5>
+                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                        <span><i class="fa fa-phone-alt"></i></span>
+                        <span class="ms-2">+44 (0) 3333 444 151</span>
+                    </a>
+                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                        <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
+                        <span class="ms-2">hello@geidans.co.uk</span>
+                    </a>
+                    <p class="text-white mb-0">Address line 1</p>
+                    <p class="text-white mb-0">Address line 2</p>
+                    <p class="text-white mb-0">Address line 3</p>
+                </div>
+                <div class="col-lg-4 d-none d-lg-block ">
+                    <h5 class="text-white fw-bold text-uppercase">
+                        link column here
+                    </h5>
+                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <h5 class="text-white fw-bold text-uppercase">
+                        services
+                    </h5>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Systems integration</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Bespoke applications</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Consulting</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Data migration</a>
+                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Application refactoring</a>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <!-- Footer end -->
+
+    <!-- Section Copyright start -->
+    <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9 mx-auto">
+                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
+                        <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
+                        <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
+                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                                Privacy & GDPR
+                            </a>
+                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                                Terms
+                            </a>
+                            <a href="#" class="text-decoration-none text-white d-block px-2 border-lg-end border-white">
+                                Legal Notice
+                            </a>
+                            <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Section Copyright end -->
+
 
 
 
