new pages added

--- a/career.html
+++ b/career.html
@@ -36,9 +36,9 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="header">
+    <section class="team-header">
 
-        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+        <nav class=" navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="home.html">Geidans Solutions</a>
                 <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
@@ -58,7 +58,7 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white" href="#">careers</a>
+                            <a class="nav-link text-uppercase text-white">careers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-uppercase text-white">concact</a>
@@ -70,65 +70,78 @@
         <div class="header-content container text-white px-3">
             <div class="row">
                 <div class='col-md-6'>
-                    <h1 class="header-content-heading fw-bold mb-4">
-                        Get the best
+                    <p class="text-white fw-bold">Senior team</p>
+                    <h2 class="header-content-heading text-light-blue fw-bold mb-4">
+                        Pullquote from the page
                         <br class="d-xs-block d-md-none" />
-                        out of
+                        can go in this space
                         <br class="d-xs-none d-md-block" />
-                        your
-                        <br class="d-xs-block d-md-none" /> business
-                    </h1>
-                    <h6>Geidans Solutions</h6>
-                    <h6>Now You Can.</h6>
-                    <div class="mt-4 d-none d-md-block">
-                        <button class="btn with-border text-uppercase text-white fw-bold">our services</button>
-                        <button class="btn text-uppercase bg-orange text-white fw-bold"> talk to us</button>
-                    </div>
+                        here.
+                    </h2>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Header end  -->
-    <!-- Section Problem Solver start  -->
+    <!-- Section team card  -->
     <section class="py-4 py-md-5 px-3">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-4 p-0 text-left">
-                    <h2 class="text-blue fw-bold">Problem solvers</h2>
-                    <h2 class="text-blue fw-bold">Process fixers</h2>
+                <div class="col-12 col-md-4">
+                    <div class="card border-0">
+                        <img src="./assets/Team portraits/Andrew_portrait.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-blue fw-bold">Andrew Geidans</h5>
+                            <p class="card-text text-blue">
+                                Founder and MD,
+                                <br>
+                                Technical Consultant
+                            </p>
+                            <a href="#" class="btn">
+                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-8 p-0">
-                    <p class="text-orange fw-bold">
-                        As a small or medium sized business
-                        <br class="d-none d-md-block">
-                        owner, you've come a long way fast
-                    </p>
-                    <p class="text-blue">
-                        You're poised for a success. You've invested time, money and
-                        effort in people, technology and systems to increase efficiency.
-                    </p>
-                    <p class="text-orange fw-bold">So why isn't the business performing?</p>
-                    <p class="text-blue">Geidans Solutions are problem solvers and process fixers for SMEs</p>
-                    <p class="text-blue">
-                        We believe in empowering SMEs by impoving how they work.
-                        The reward to you is growth. The reward to us is making that happen for you.
-                        If it's thinkable, it's possible.
-                    </p>
-                    <p class="text-blue">
-                        If your business processes are holding you back from what
-                        you could achieve - we can help you take on the big boys
-                        And win
-                    </p>
-                    <div class="mt-4 d-block d-md-none">
-                        <button class="btn with-border text-uppercase text-blue fw-bold w-100 mb-3">our
-                            services</button>
-                        <button class="btn text-uppercase bg-orange text-white fw-bold w-100"> talk to us</button>
+                <div class="col-12 col-md-4">
+                    <div class="card border-0 position-relative">
+                        <img src="./assets/Team portraits/Jana_portrait.png" class="card-img-top" alt="...">
+                        <div class="card-image-top-over"></div>
+                        <div class="card-body">
+                            <h5 class="card-title text-blue fw-bold">Jana Zaragotska</h5>
+                            <p class="card-text text-blue">
+                                Operations Director
+                            </p>
+                            <a href="#" class="btn">
+                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card border-0">
+                        <img src="./assets/Team portraits/Pavel_portrait.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-blue fw-bold">Pavel Maksimov</h5>
+                            <p class="card-text text-blue">
+                                Technical Director
+                            </p>
+                            <a href="#" class="btn">
+                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Section Problem Solver end  -->
+    <!-- Section Team end  -->
     <!-- Section Review start -->
     <section class="py-4 py-md-5 px-3 bg-orange">
         <div class="container">
@@ -156,127 +169,6 @@
         </div>
     </section>
     <!-- Section Review end -->
-
-    <!-- Section Why us start  -->
-    <section class="py-4 py-md-5 px-3 bg-light-grey">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4 text-left mb-3 mb-md-0">
-                    <h2 class="text-blue fw-bold">Think Smarter.</h2>
-                    <h2 class="text-blue fw-bold">Grow Faster.</h2>
-                    <h2 class="text-blue fw-bold">Compete Harder.</h2>
-                </div>
-                <div class="col-12 col-md-8">
-                    <h4 class="text-dark fw-bolder">
-                        Why Us
-                    </h4>
-                    <p class="text-blue mb-0">
-                        We believe if you control your processes, you control your business.
-                    </p>
-                    <p class="text-blue mb-0">
-                        We streamline your systems, optimise your processes, in-crease your efficiency
-                        increase your efficiency. Putting you back in control. And we just happen to do it
-                        through powerful technology and software.
-                    </p>
-                    <p class="text-blue mb-3">
-                        Every Geidans Solutions project has shown a positive ROI
-                        Within the first 12 monthes. You see tangible benegits to you bottom line fast.
-                    </p>
-
-                    <button class="btn bg-blue text-white fw-bold text-uppercase d-none d-md-block">
-                        that's why us
-                    </button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Section Why us end -->
-
-    <!-- Section Geidans-help start -->
-    <section class="section-help py-3 py-md-5 px-4">
-        <h2 class="text-orange text-center fw-bold mb-4 mb-md-5">How we can help</h2>
-        <div class="container">
-            <div class="row mb-4 mb-md-5">
-                <div class="col-lg-9 mx-auto d-flex flex-column align-items-center flex-md-row">
-                    <img class="me-0 me-md-5" src="./assets/Icon images/Systems_icon.png" alt="systems-icon">
-                    <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-500 text-blue">Getting your software systems to talk each other</h2>
-                        <p class="text-blue d-none d-md-block">
-                            Getting software systems to talk each other is as important as getting people
-                            to communicate properly
-                        </p>
-                        <a href="#" class="text-orange fw-bold d-none d-md-block">Tell me more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-4 mb-md-5">
-                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
-                    <img class="me-0 me-md-5" src="./assets/Icon images/Building_icon.png" alt="systems-icon">
-                    <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-500 text-blue">Building software that suits your business</h2>
-                        <p class="text-blue d-none d-md-block">
-                            Our technical development team build bespoke applications that fit your business
-                            and nobody's else.
-                        </p>
-                        <a href="#" class="text-orange fw-bold d-none d-md-block">What need that</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-4 mb-md-5">
-                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
-                    <img class="me-0 me-md-5" src="./assets/Icon images/Move_icon.png" alt="systems-icon">
-                    <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-500 text-blue">What you need to move your data</h2>
-                        <p class="text-blue d-none d-md-block">
-                            we have 20 years' experience in shifting data safely
-                            so we know what we're doing.
-                        </p>
-                        <a href="#" class="text-orange fw-bold d-none d-md-block">We need that</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
-                    <img class="me-0 me-md-5" src="./assets/Icon images/Upgrade_icon.png" alt="systems-icon">
-                    <div class="section-help-detail">
-                        <h2 class="fw-500 text-blue text-center text-md-start">Making current software good as new</h2>
-                        <p class="text-blue d-none d-md-block">
-                            if you need to update your existing system rather than invest in a
-                            brand new one, we can refresh and rebund it.
-                        </p>
-                        <a href="#" class="text-orange fw-bold d-none d-md-block">Yes please</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Section Geidans-help end -->
-
-
-    <!-- Section Solutions start  -->
-    <section class="py-4 py-md-5 px-3 section-solution">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4 d-flex flex-row flex-md-column justify-content-between">
-                    <h3 class="text-orange">Dynamic</h3>
-                    <h3 class="text-orange">Flexible</h3>
-                    <h3 class="text-orange">Fast</h3>
-                </div>
-                <div class="col-12 col-md-8">
-                    <p class="fw-bold text-white">
-                        At Geidans Solutions, we have over 20
-                        years' experience in soling the process issues that holdmany systemsb
-                        back from achieving real growth
-                    </p>
-                    <p class="fw-bold text-white">
-                        SME owners are can-do, make-it-happen people.
-                        <span class="text-orange">So are we</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Section Solutions end -->
 
     <!-- Section Contact start -->
     <section class="section-contact py-4 py-md-5 px-3">
